syntax = "proto2";

import "common.proto";

option java_multiple_files = true;
option java_package = "no.nordicsemi.android.wifi";

// Requests

/* Scanning parameters. */
message ScanParams {
  optional Band band              = 1 [default = BAND_ANY];
  optional bool passive           = 2 [default = false];
  optional uint32 period_ms       = 3 [default = 0]; // 0 - no timeout
  optional uint32 group_channels  = 4;
}

/* Wi-Fi provisioning configuration for SET_CONFIG request. */
message WifiConfig {
  required bytes ssid             = 1;
  required bytes bssid            = 2;
  optional bytes passphrase       = 3;
  optional Band band              = 4;
  required uint32 channel         = 5;
  optional AuthMode auth          = 6;
}

/* The request type, sent to the device. */
message Request {
  // The op_code has to be optional, as new op codes may be added in the future.
  // They would fail to be decoded in earlier versions, causing am error.
  // With the optional modifier, they will be decoded as null.
  optional OpCode op_code         = 1;

  // Parameters:

  // The parameter for START_SCAN request.
  optional ScanParams scan_params = 10;
  // The parameter for SET_CONFIG request.
  optional WifiConfig config      = 11;
}
